src/main/java/com/example/property_management/error/exception/ForbiddenException.java
package com.example.property_management.error.exception;

public class ForbiddenException extends RuntimeException {
    public ForbiddenException(String message) {
        super(message);
    }
}
